--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,173 @@
-@import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
-@import url(http://fonts.googleapis.com/css?family=Clicker+Script);
-
-/* This 
-is 
-a comment! */
+/* This is a comment! */
 
 /* CSS Syntax:
 
 selector {
-  property: value;
-  property: value;
+	property: value;
+	property: value;
 }
 
 */
 
 /* Type selector */
 
-p { /* select all <p> */
-  font-size: 1em; /* 16px, ?pt, 100%, 1em */
-  line-height: 1.5em;
+p { /* select all <p> */ 
+	font-size: 16px; /* 16px, ?pt, 100%, 1em */
+	line-height: 1.5em;
 }
 
 figcaption {
-  /*font-weight: normal;
-  font-size: 0.75em;
-  line-height: 1.5em;
-  font-family: Georgia, "New Times Roman", serif;*/
-  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
-  color: #777;
-  text-align: right;
+/*font-weight: normal;
+font-size: 0.75em;
+line-height: 1.5em;
+font-family: Georgia, "New Times Roman", serif;*/
+font:normal 0.75em/1.5em Georgia, "New Times Roman", serif;
+color: #777;
+text-align: right;
 }
 
-/* Class selector (applied to as many elements as you like) */
+/*class selector (applied to as many elements as you like)*/
+.milk-text { /* select elements with a class="milk-text" */
+	font: bold 2.6em Georgiam serif;
+	color: white;
+	text-shadow: 0 2px 3px #000;
+ }
 
-.milk-text { /* select elements with class="milk-text" */
-  font: bold 2.6em 'Elsie Swash Caps', cursive;
-  color: white;
-  text-shadow: 0 2px 3px #000;
-}
+ /* ID selector (can only be applied to one element per page)*/
 
-/* ID selector (apply to one unique element per page) */
+ #logo { /*selects elements with id=logo */
+ 	background: blue;
+ 	 }
 
-#logo { /* select elements with id="logo" */
-  background: aqua;
-}
+ /*Descendent Selector */
 
-/* Descendent Selector */
+ #logo h1 { /*will only style h1s if they're inside the id="logo" */
+ 	font-family: cursive;
+ }
 
-#logo h1 { /* selects <h1> if inside the id="logo" */
-  font-family: 'Clicker Script', cursive;
-}
+ #logo h2 {
+ 	font-family: serif;
+ }
 
-#logo h2 {
-  font-family: 'Elsie Swash Caps', cursive;
-}
+ /*Psuedo Selector - style things in certain states*/
 
-/* Psuedo Selector */
-
-#details a:link, #details a:visited {
-  color: black;
-  text-decoration: none;
-}
+ #details a:link, #details a:visited {
+	color: black;
+	text-decoration: none;
+ }
 
 #details a:hover {
-  color: black;
-  text-decoration: underline;
+	color: black;
+	text-decoration: underline;
 }
 
 #details a:active {
-  color: red;
+	color: red;
+	text-decoration: underline;
 }
+
+/*////// MEDIA /////////*/
+
+img, video, audio {
+	max-width: 100%;
+}
+
+
+/*////// LAYOUT /////////*/
+
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+.wrapper {
+	width: 960px;
+	margin: 0 auto;
+	background: #eee;
+}
+
+/*span 1/3 of space*/
+.col-1 {
+	float: left;
+	/*100% - 2% margins btw columns 1&2 and 2&3 = 96/3 = 32 */
+	width: 32%;
+	background: #ccc;
+}
+
+/*span 2/3 of space*/
+.col-2 {
+	float: left;
+	/*100% - 2% margin - 32% last column = 66 */
+	width: 66%;
+	background: #ccc;
+
+}
+
+/*span whole space*/
+.col-3 {
+	background: #ccc
+}
+
+/*attribute selector: anything that has a class with "col- 
+in it, do this*/
+[class*="col-"] {
+	margin-left: 2%;
+}
+
+.first {
+	margin-left: 0%;
+}
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	height: 0;
+	line-height: 0;
+}
+
+/*////// SECTIONS /////////*/
+
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: #fff;
+	z-index: 1;
+}
+
+section {
+	padding: 20px;
+	margin-bottom: 20px ;
+}
+
+/*////// SOCIAL /////////*/
+
+#social {
+	position: fixed;
+	top: 200px;
+	right: 20px;
+	width: 40px;
+	z-index: 1;
+}
+
+/* Descendant selector to select all of the links! */
+#social a {
+	display: block;
+	width: 40px;
+	height: 40px;
+	background: yellow;
+}
+
+
+
+
+
+
+
+
+
